--- a/jsconfig.json
+++ b/jsconfig.json
@@ -18,5 +18,6 @@
         "**/scripts/static/Drawing.js",
         "**/scripts/static/Buttons.js",
         "**/games/GoPongYourself.js",
+        "**/games/SomeTennisGame.js"
     ]
 }
