rename file for clarity  - Games.js -> GameLibrary.js

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -18,6 +18,7 @@
         "**/scripts/static/Drawing.js",
         "**/scripts/static/Buttons.js",
         "**/games/GoPongYourself.js",
-        "**/games/SomeTennisGame.js"
+        "**/games/SomeTennisGame.js",
+        "**/scripts/static/GamesLibrary.js"
     ]
 }
