--- a/jsconfig.json
+++ b/jsconfig.json
@@ -19,6 +19,7 @@
         "scripts/static/Buttons.js",
         "games/GoPongYourself.js",
         "games/SomeTennisGame.js",
-        "games/BreakBricks.js"
+        "games/BreakBricks.js",
+        "games/MinimumExample.js"
     ]
 }
